Revamp RHEV-M driver tests and rerecord them
This patch changes the tests so that they do not depend on any hardcoded
values; rather, all these values are loaded from ~/.deltacloud/config

  * store preferences in fixtures/preferences.yml when recording
  * load them from there when not recording
  * use preference items in tests rather than hardcoded ones
  * use driver/credentials from config everywhere
  * avoid a bunch of pointless HTTP requests

--- a/server/tests/drivers/rhevm/fixtures/test_0001_must_throw_error_when_wrong_credentials.yml
+++ b/server/tests/drivers/rhevm/fixtures/test_0001_must_throw_error_when_wrong_credentials.yml
@@ -2,58 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://unknown:wrong@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a
-    body:
-      encoding: UTF-8
-      string: ''
-    headers:
-      Content-Type:
-      - application/xml
-      Accept:
-      - application/xml
-      Accept-Encoding:
-      - gzip, deflate
-  response:
-    status:
-      code: 401
-      message: Unauthorized
-    headers:
-      Cache-Control:
-      - no-cache
-      Www-Authenticate:
-      - Basic realm="ENGINE"
-      Content-Type:
-      - text/html;charset=utf-8
-      Set-Cookie:
-      - JSESSIONID=GAKFIJcON-ahGoQHZfVzT5vm; Path=/api; Secure
-      Content-Length:
-      - '978'
-      Pragma:
-      - No-cache
-      Expires:
-      - Thu, 01 Jan 1970 01:00:00 CET
-      Connection:
-      - close
-      Date:
-      - Fri, 09 Nov 2012 08:52:52 GMT
-    body:
-      encoding: UTF-8
-      string: ! '<html><head><title>JBoss Web/7.0.16..Final-redhat-1 - Error report</title><style><!--H1
-        {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:22px;}
-        H2 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:16px;}
-        H3 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:14px;}
-        BODY {font-family:Tahoma,Arial,sans-serif;color:black;background-color:white;}
-        B {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;}
-        P {font-family:Tahoma,Arial,sans-serif;background:white;color:black;font-size:12px;}A
-        {color : black;}A.name {color : black;}HR {color : #525D76;}--></style> </head><body><h1>HTTP
-        Status 401 - </h1><HR size="1" noshade="noshade"><p><b>type</b> Status report</p><p><b>message</b>
-        <u></u></p><p><b>description</b> <u>This request requires HTTP authentication
-        ().</u></p><HR size="1" noshade="noshade"><h3>JBoss Web/7.0.16..Final-redhat-1</h3></body></html>'
-    http_version: 
-  recorded_at: Fri, 09 Nov 2012 08:52:53 GMT
-- request:
-    method: get
-    uri: https://unknown:wrong@10.16.120.71/api/datacenters/b9bb11c2-f397-4f41-a57b-7ac15a894779
+    uri: https://fakeuser:fakepassword@rhevm.example.com/api/datacenters?search=
     body:
       encoding: US-ASCII
       string: ''
@@ -72,7 +21,7 @@ http_interactions:
       message: Unauthorized
     headers:
       Date:
-      - Wed, 27 Feb 2013 22:30:56 GMT
+      - Thu, 07 Mar 2013 22:42:44 GMT
       Pragma:
       - No-cache
       Cache-Control:
@@ -80,7 +29,7 @@ http_interactions:
       Expires:
       - Wed, 31 Dec 1969 19:00:00 EST
       Set-Cookie:
-      - JSESSIONID=AfmfC00x3rgE0rhq-nYHIgSv; Path=/api; Secure
+      - JSESSIONID=kAPUjqTHDinC3RYqjSPGmi55; Path=/api; Secure
       Www-Authenticate:
       - Basic realm="ENGINE"
       Content-Type:
@@ -103,5 +52,5 @@ http_interactions:
         <u></u></p><p><b>description</b> <u>This request requires HTTP authentication
         ().</u></p><HR size="1" noshade="noshade"><h3>JBoss Web/7.0.16..Final-redhat-1</h3></body></html>'
     http_version: 
-  recorded_at: Wed, 27 Feb 2013 22:30:47 GMT
+  recorded_at: Thu, 07 Mar 2013 22:42:45 GMT
 recorded_with: VCR 2.4.0
