--- a/server/tests/drivers/rhevm/fixtures/test_0003_must_switch_realms_when_switching_between_different_clusters.yml
+++ b/server/tests/drivers/rhevm/fixtures/test_0003_must_switch_realms_when_switching_between_different_clusters.yml
@@ -1,463 +1,53 @@
---- 
-recorded_with: VCR 2.3.0
-http_interactions: 
-- request: 
+---
+http_interactions:
+- request:
     method: get
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters?search=
-    body: 
-      string: ""
-    headers: 
-      Content-Type: 
+    uri: https://fakeuser:fakepassword@rhevm.example.com/api/datacenters?search=
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
       - application/xml
-      Accept-Encoding: 
+      Accept-Encoding:
       - gzip, deflate
-      Accept: 
+      Content-Type:
       - application/xml
-  response: 
-    status: 
+      User-Agent:
+      - Ruby
+  response:
+    status:
       code: 200
       message: OK
-    headers: 
-      Cache-Control: 
-      - no-cache
-      Content-Length: 
-      - "923"
-      Set-Cookie: 
-      - JSESSIONID=THVKmxvpU6H2mJw6Mw+ITQv0; Path=/api; Secure
-      Content-Type: 
-      - application/xml
-      Pragma: 
+    headers:
+      Date:
+      - Thu, 07 Mar 2013 22:09:52 GMT
+      Pragma:
       - No-cache
-      Date: 
-      - Thu, 22 Nov 2012 11:38:26 GMT
-      Expires: 
-      - Thu, 01 Jan 1970 01:00:00 CET
-      Connection: 
-      - close
-    body: 
-      string: |
-        <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-        <data_centers>
-            <data_center href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a" id="9df72b84-0234-11e2-9b87-9386d9b09d4a">
-                <name>Default</name>
-                <description>The default Data Center</description>
-                <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains" rel="storagedomains"/>
-                <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions" rel="permissions"/>
-                <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas" rel="quotas"/>
-                <storage_type>nfs</storage_type>
-                <storage_format>v3</storage_format>
-                <version major="3" minor="1"/>
-                <supported_versions>
-                    <version major="3" minor="1"/>
-                </supported_versions>
-                <status>
-                    <state>up</state>
-                </status>
-            </data_center>
-        </data_centers>
-
-    http_version: 
-  recorded_at: Thu, 22 Nov 2012 11:38:26 GMT
-- request: 
-    method: get
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters?search=
-    body: 
-      string: ""
-    headers: 
-      Content-Type: 
-      - application/xml
-      Accept-Encoding: 
-      - gzip, deflate
-      Accept: 
-      - application/xml
-  response: 
-    status: 
-      code: 200
-      message: OK
-    headers: 
-      Cache-Control: 
+      Cache-Control:
       - no-cache
-      Content-Length: 
-      - "923"
-      Set-Cookie: 
-      - JSESSIONID=KGi9TcCiflzgxTbZng7e+xKV; Path=/api; Secure
-      Content-Type: 
+      Expires:
+      - Wed, 31 Dec 1969 19:00:00 EST
+      Set-Cookie:
+      - JSESSIONID=QHVfdSkvAiey6E-CobfigUCt; Path=/api; Secure
+      Content-Type:
       - application/xml
-      Pragma: 
-      - No-cache
-      Date: 
-      - Thu, 22 Nov 2012 11:38:26 GMT
-      Expires: 
-      - Thu, 01 Jan 1970 01:00:00 CET
-      Connection: 
+      Content-Length:
+      - '864'
+      Connection:
       - close
-    body: 
-      string: |
-        <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-        <data_centers>
-            <data_center href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a" id="9df72b84-0234-11e2-9b87-9386d9b09d4a">
-                <name>Default</name>
-                <description>The default Data Center</description>
-                <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains" rel="storagedomains"/>
-                <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions" rel="permissions"/>
-                <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas" rel="quotas"/>
-                <storage_type>nfs</storage_type>
-                <storage_format>v3</storage_format>
-                <version major="3" minor="1"/>
-                <supported_versions>
-                    <version major="3" minor="1"/>
-                </supported_versions>
-                <status>
-                    <state>up</state>
-                </status>
-            </data_center>
-        </data_centers>
-
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<data_centers>\n
+        \   <data_center href=\"/api/datacenters/b9bb11c2-f397-4f41-a57b-7ac15a894779\"
+        id=\"b9bb11c2-f397-4f41-a57b-7ac15a894779\">\n        <name>iscsi</name>\n
+        \       <link href=\"/api/datacenters/b9bb11c2-f397-4f41-a57b-7ac15a894779/storagedomains\"
+        rel=\"storagedomains\"/>\n        <link href=\"/api/datacenters/b9bb11c2-f397-4f41-a57b-7ac15a894779/permissions\"
+        rel=\"permissions\"/>\n        <link href=\"/api/datacenters/b9bb11c2-f397-4f41-a57b-7ac15a894779/quotas\"
+        rel=\"quotas\"/>\n        <storage_type>iscsi</storage_type>\n        <storage_format>v3</storage_format>\n
+        \       <version major=\"3\" minor=\"1\"/>\n        <supported_versions>\n
+        \           <version major=\"3\" minor=\"1\"/>\n        </supported_versions>\n
+        \       <status>\n            <state>up</state>\n        </status>\n    </data_center>\n</data_centers>\n"
     http_version: 
-  recorded_at: Thu, 22 Nov 2012 11:38:26 GMT
-- request: 
-    method: get
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a
-    body: 
-      string: ""
-    headers: 
-      Content-Type: 
-      - application/xml
-      Accept-Encoding: 
-      - gzip, deflate
-      Accept: 
-      - application/xml
-  response: 
-    status: 
-      code: 200
-      message: OK
-    headers: 
-      Cache-Control: 
-      - no-cache
-      Content-Length: 
-      - "828"
-      Set-Cookie: 
-      - JSESSIONID=OpTGTtldpXK-SDbfGscPzUI9; Path=/api; Secure
-      Content-Type: 
-      - application/xml
-      Pragma: 
-      - No-cache
-      Date: 
-      - Thu, 22 Nov 2012 11:38:26 GMT
-      Expires: 
-      - Thu, 01 Jan 1970 01:00:00 CET
-      Connection: 
-      - close
-    body: 
-      string: |
-        <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-        <data_center href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a" id="9df72b84-0234-11e2-9b87-9386d9b09d4a">
-            <name>Default</name>
-            <description>The default Data Center</description>
-            <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains" rel="storagedomains"/>
-            <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions" rel="permissions"/>
-            <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas" rel="quotas"/>
-            <storage_type>nfs</storage_type>
-            <storage_format>v3</storage_format>
-            <version major="3" minor="1"/>
-            <supported_versions>
-                <version major="3" minor="1"/>
-            </supported_versions>
-            <status>
-                <state>up</state>
-            </status>
-        </data_center>
-
-    http_version: 
-  recorded_at: Thu, 22 Nov 2012 11:38:26 GMT
-- request: 
-    method: get
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/clusters?search=datacenter=Default
-    body: 
-      string: ""
-    headers: 
-      Content-Type: 
-      - application/xml
-      Accept-Encoding: 
-      - gzip, deflate
-      Accept: 
-      - application/xml
-  response: 
-    status: 
-      code: 200
-      message: OK
-    headers: 
-      Cache-Control: 
-      - no-cache
-      Content-Length: 
-      - "1232"
-      Set-Cookie: 
-      - JSESSIONID=ufLNuwzI5C2bIneOv7FNEN05; Path=/api; Secure
-      Content-Type: 
-      - application/xml
-      Pragma: 
-      - No-cache
-      Date: 
-      - Thu, 22 Nov 2012 11:38:26 GMT
-      Expires: 
-      - Thu, 01 Jan 1970 01:00:00 CET
-      Connection: 
-      - close
-    body: 
-      string: |
-        <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-        <clusters>
-            <cluster href="/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95" id="99408929-82cf-4dc7-a532-9d998063fa95">
-                <name>Default</name>
-                <description>The default server cluster</description>
-                <link href="/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95/networks" rel="networks"/>
-                <link href="/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95/permissions" rel="permissions"/>
-                <link href="/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95/glustervolumes" rel="glustervolumes"/>
-                <cpu id="Intel Westmere Family"/>
-                <data_center href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a" id="9df72b84-0234-11e2-9b87-9386d9b09d4a"/>
-                <memory_policy>
-                    <overcommit percent="150"/>
-                    <transparent_hugepages>
-                        <enabled>true</enabled>
-                    </transparent_hugepages>
-                </memory_policy>
-                <scheduling_policy/>
-                <version major="3" minor="1"/>
-                <error_handling>
-                    <on_error>migrate</on_error>
-                </error_handling>
-                <virt_service>true</virt_service>
-                <gluster_service>false</gluster_service>
-            </cluster>
-        </clusters>
-
-    http_version: 
-  recorded_at: Thu, 22 Nov 2012 11:38:26 GMT
-- request: 
-    method: get
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a
-    body: 
-      string: ""
-    headers: 
-      Content-Type: 
-      - application/xml
-      Accept-Encoding: 
-      - gzip, deflate
-      Accept: 
-      - application/xml
-  response: 
-    status: 
-      code: 200
-      message: OK
-    headers: 
-      Cache-Control: 
-      - no-cache
-      Content-Length: 
-      - "828"
-      Set-Cookie: 
-      - JSESSIONID=wdiuRx7p0wt+R7+uNbgY9LOu; Path=/api; Secure
-      Content-Type: 
-      - application/xml
-      Pragma: 
-      - No-cache
-      Date: 
-      - Thu, 22 Nov 2012 11:38:26 GMT
-      Expires: 
-      - Thu, 01 Jan 1970 01:00:00 CET
-      Connection: 
-      - close
-    body: 
-      string: |
-        <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-        <data_center href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a" id="9df72b84-0234-11e2-9b87-9386d9b09d4a">
-            <name>Default</name>
-            <description>The default Data Center</description>
-            <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains" rel="storagedomains"/>
-            <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions" rel="permissions"/>
-            <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas" rel="quotas"/>
-            <storage_type>nfs</storage_type>
-            <storage_format>v3</storage_format>
-            <version major="3" minor="1"/>
-            <supported_versions>
-                <version major="3" minor="1"/>
-            </supported_versions>
-            <status>
-                <state>up</state>
-            </status>
-        </data_center>
-
-    http_version: 
-  recorded_at: Thu, 22 Nov 2012 11:38:26 GMT
-- request: 
-    method: get
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a
-    body: 
-      string: ""
-    headers: 
-      Content-Type: 
-      - application/xml
-      Accept-Encoding: 
-      - gzip, deflate
-      Accept: 
-      - application/xml
-  response: 
-    status: 
-      code: 200
-      message: OK
-    headers: 
-      Cache-Control: 
-      - no-cache
-      Content-Length: 
-      - "828"
-      Set-Cookie: 
-      - JSESSIONID=kl5Y6HgCaN5XOOglPCxOgVo9; Path=/api; Secure
-      Content-Type: 
-      - application/xml
-      Pragma: 
-      - No-cache
-      Date: 
-      - Thu, 22 Nov 2012 11:38:26 GMT
-      Expires: 
-      - Thu, 01 Jan 1970 01:00:00 CET
-      Connection: 
-      - close
-    body: 
-      string: |
-        <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-        <data_center href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a" id="9df72b84-0234-11e2-9b87-9386d9b09d4a">
-            <name>Default</name>
-            <description>The default Data Center</description>
-            <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains" rel="storagedomains"/>
-            <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions" rel="permissions"/>
-            <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas" rel="quotas"/>
-            <storage_type>nfs</storage_type>
-            <storage_format>v3</storage_format>
-            <version major="3" minor="1"/>
-            <supported_versions>
-                <version major="3" minor="1"/>
-            </supported_versions>
-            <status>
-                <state>up</state>
-            </status>
-        </data_center>
-
-    http_version: 
-  recorded_at: Thu, 22 Nov 2012 11:38:26 GMT
-- request: 
-    method: get
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/clusters?search=datacenter=Default
-    body: 
-      string: ""
-    headers: 
-      Content-Type: 
-      - application/xml
-      Accept-Encoding: 
-      - gzip, deflate
-      Accept: 
-      - application/xml
-  response: 
-    status: 
-      code: 200
-      message: OK
-    headers: 
-      Cache-Control: 
-      - no-cache
-      Content-Length: 
-      - "1232"
-      Set-Cookie: 
-      - JSESSIONID=eKlDVA2R9osDJdgrTi4dsTf9; Path=/api; Secure
-      Content-Type: 
-      - application/xml
-      Pragma: 
-      - No-cache
-      Date: 
-      - Thu, 22 Nov 2012 11:38:26 GMT
-      Expires: 
-      - Thu, 01 Jan 1970 01:00:00 CET
-      Connection: 
-      - close
-    body: 
-      string: |
-        <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-        <clusters>
-            <cluster href="/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95" id="99408929-82cf-4dc7-a532-9d998063fa95">
-                <name>Default</name>
-                <description>The default server cluster</description>
-                <link href="/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95/networks" rel="networks"/>
-                <link href="/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95/permissions" rel="permissions"/>
-                <link href="/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95/glustervolumes" rel="glustervolumes"/>
-                <cpu id="Intel Westmere Family"/>
-                <data_center href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a" id="9df72b84-0234-11e2-9b87-9386d9b09d4a"/>
-                <memory_policy>
-                    <overcommit percent="150"/>
-                    <transparent_hugepages>
-                        <enabled>true</enabled>
-                    </transparent_hugepages>
-                </memory_policy>
-                <scheduling_policy/>
-                <version major="3" minor="1"/>
-                <error_handling>
-                    <on_error>migrate</on_error>
-                </error_handling>
-                <virt_service>true</virt_service>
-                <gluster_service>false</gluster_service>
-            </cluster>
-        </clusters>
-
-    http_version: 
-  recorded_at: Thu, 22 Nov 2012 11:38:26 GMT
-- request: 
-    method: get
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a
-    body: 
-      string: ""
-    headers: 
-      Content-Type: 
-      - application/xml
-      Accept-Encoding: 
-      - gzip, deflate
-      Accept: 
-      - application/xml
-  response: 
-    status: 
-      code: 200
-      message: OK
-    headers: 
-      Cache-Control: 
-      - no-cache
-      Content-Length: 
-      - "828"
-      Set-Cookie: 
-      - JSESSIONID=NZCK1I6GkMLfuMSKvaRzZ2y9; Path=/api; Secure
-      Content-Type: 
-      - application/xml
-      Pragma: 
-      - No-cache
-      Date: 
-      - Thu, 22 Nov 2012 11:38:26 GMT
-      Expires: 
-      - Thu, 01 Jan 1970 01:00:00 CET
-      Connection: 
-      - close
-    body: 
-      string: |
-        <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-        <data_center href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a" id="9df72b84-0234-11e2-9b87-9386d9b09d4a">
-            <name>Default</name>
-            <description>The default Data Center</description>
-            <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains" rel="storagedomains"/>
-            <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions" rel="permissions"/>
-            <link href="/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas" rel="quotas"/>
-            <storage_type>nfs</storage_type>
-            <storage_format>v3</storage_format>
-            <version major="3" minor="1"/>
-            <supported_versions>
-                <version major="3" minor="1"/>
-            </supported_versions>
-            <status>
-                <state>up</state>
-            </status>
-        </data_center>
-
-    http_version: 
-  recorded_at: Thu, 22 Nov 2012 11:38:26 GMT
+  recorded_at: Thu, 07 Mar 2013 22:09:52 GMT
+recorded_with: VCR 2.4.0
