--- a/server/tests/drivers/rhevm/fixtures/test_0005_must_throw_proper_exception_when_destroying_used_image.yml
+++ b/server/tests/drivers/rhevm/fixtures/test_0005_must_throw_proper_exception_when_destroying_used_image.yml
@@ -2,7 +2,50 @@
 http_interactions:
 - request:
     method: get
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5
+    uri: https://fakeuser:fakepassword@rhevm.example.com/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - application/xml
+      Accept-Encoding:
+      - gzip, deflate
+      Content-Type:
+      - application/xml
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 404
+      message: Not Found
+    headers:
+      Date:
+      - Thu, 07 Mar 2013 21:59:34 GMT
+      Content-Type:
+      - text/html;charset=utf-8
+      Content-Length:
+      - '976'
+      Connection:
+      - close
+    body:
+      encoding: US-ASCII
+      string: ! '<html><head><title>JBoss Web/7.0.16..Final-redhat-1 - Error report</title><style><!--H1
+        {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:22px;}
+        H2 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:16px;}
+        H3 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:14px;}
+        BODY {font-family:Tahoma,Arial,sans-serif;color:black;background-color:white;}
+        B {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;}
+        P {font-family:Tahoma,Arial,sans-serif;background:white;color:black;font-size:12px;}A
+        {color : black;}A.name {color : black;}HR {color : #525D76;}--></style> </head><body><h1>HTTP
+        Status 404 - </h1><HR size="1" noshade="noshade"><p><b>type</b> Status report</p><p><b>message</b>
+        <u></u></p><p><b>description</b> <u>The requested resource () is not available.</u></p><HR
+        size="1" noshade="noshade"><h3>JBoss Web/7.0.16..Final-redhat-1</h3></body></html>'
+    http_version: 
+  recorded_at: Thu, 07 Mar 2013 21:59:34 GMT
+- request:
+    method: get
+    uri: https://fakeuser:fakepassword@rhevm.example.com/api/templates/da12fc7e-8f0c-4ebb-a524-5e99b3214d75
     body:
       encoding: US-ASCII
       string: ''
@@ -21,47 +64,47 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 09 Nov 2012 09:03:59 GMT
+      - Thu, 07 Mar 2013 22:05:34 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
-      - Thu, 01 Jan 1970 01:00:00 CET
+      - Wed, 31 Dec 1969 19:00:00 EST
       Set-Cookie:
-      - JSESSIONID=tZUBDK6-JGHfxqHb+z0V0d+J; Path=/api; Secure
+      - JSESSIONID=7vrIFkOICLaPD3IuXKGwXuZB; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
-      - '1608'
+      - '1635'
       Connection:
       - close
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<template
-        href=\"/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5\" id=\"5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5\">\n
-        \   <actions>\n        <link href=\"/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5/export\"
-        rel=\"export\"/>\n    </actions>\n    <name>rhel63server</name>\n    <description>RHEL
-        6.3 Server Default</description>\n    <link href=\"/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5/disks\"
-        rel=\"disks\"/>\n    <link href=\"/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5/nics\"
-        rel=\"nics\"/>\n    <link href=\"/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5/cdroms\"
-        rel=\"cdroms\"/>\n    <link href=\"/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5/permissions\"
+        href=\"/api/templates/da12fc7e-8f0c-4ebb-a524-5e99b3214d75\" id=\"da12fc7e-8f0c-4ebb-a524-5e99b3214d75\">\n
+        \   <actions>\n        <link href=\"/api/templates/da12fc7e-8f0c-4ebb-a524-5e99b3214d75/export\"
+        rel=\"export\"/>\n    </actions>\n    <name>07ef6eb0-2e43-43a2-b3f0-cb1f15882f13</name>\n
+        \   <description>Template name (RHEL63) from base image (3ee78645-5d04-4584-9d35-fe93dde38ed5)</description>\n
+        \   <link href=\"/api/templates/da12fc7e-8f0c-4ebb-a524-5e99b3214d75/disks\"
+        rel=\"disks\"/>\n    <link href=\"/api/templates/da12fc7e-8f0c-4ebb-a524-5e99b3214d75/nics\"
+        rel=\"nics\"/>\n    <link href=\"/api/templates/da12fc7e-8f0c-4ebb-a524-5e99b3214d75/cdroms\"
+        rel=\"cdroms\"/>\n    <link href=\"/api/templates/da12fc7e-8f0c-4ebb-a524-5e99b3214d75/permissions\"
         rel=\"permissions\"/>\n    <type>server</type>\n    <status>\n        <state>ok</state>\n
-        \   </status>\n    <memory>1073741824</memory>\n    <cpu>\n        <topology
-        sockets=\"1\" cores=\"1\"/>\n    </cpu>\n    <os type=\"rhel_6x64\">\n        <boot
-        dev=\"hd\"/>\n        <kernel></kernel>\n        <initrd></initrd>\n        <cmdline></cmdline>\n
-        \   </os>\n    <cluster href=\"/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95\"
-        id=\"99408929-82cf-4dc7-a532-9d998063fa95\"/>\n    <creation_time>2012-09-19T15:20:10.740+02:00</creation_time>\n
+        \   </status>\n    <memory>536870912</memory>\n    <cpu>\n        <topology
+        sockets=\"1\" cores=\"1\"/>\n    </cpu>\n    <os type=\"other_linux\">\n        <boot
+        dev=\"cdrom\"/>\n        <boot dev=\"hd\"/>\n    </os>\n    <cluster href=\"/api/clusters/b91b0346-4ba3-11e2-a3ac-0050568c6b2d\"
+        id=\"b91b0346-4ba3-11e2-a3ac-0050568c6b2d\"/>\n    <creation_time>2013-02-25T08:04:46.000-05:00</creation_time>\n
         \   <origin>rhev</origin>\n    <high_availability>\n        <enabled>false</enabled>\n
-        \       <priority>1</priority>\n    </high_availability>\n    <display>\n
+        \       <priority>0</priority>\n    </high_availability>\n    <display>\n
         \       <type>vnc</type>\n        <monitors>1</monitors>\n        <allow_override>false</allow_override>\n
         \   </display>\n    <stateless>false</stateless>\n    <usb>\n        <enabled>false</enabled>\n
         \   </usb>\n</template>\n"
     http_version: 
-  recorded_at: Fri, 09 Nov 2012 09:04:00 GMT
+  recorded_at: Thu, 07 Mar 2013 22:05:34 GMT
 - request:
     method: delete
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5
+    uri: https://fakeuser:fakepassword@rhevm.example.com/api/templates/da12fc7e-8f0c-4ebb-a524-5e99b3214d75
     body:
       encoding: US-ASCII
       string: ''
@@ -78,18 +121,18 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Fri, 09 Nov 2012 09:03:59 GMT
+      - Thu, 07 Mar 2013 22:05:35 GMT
       Content-Type:
       - application/xml
       Content-Length:
-      - '208'
+      - '217'
       Connection:
       - close
     body:
       encoding: US-ASCII
       string: ! '<?xml version="1.0" encoding="UTF-8" standalone="yes"?><fault><reason>Operation
         Failed</reason><detail>[Cannot delete Template. Template is being used by
-        the following VMs: JoeV_06112012_01.]</detail></fault>'
+        the following VMs: i-1362693110,i-1362692460.]</detail></fault>'
     http_version: 
-  recorded_at: Fri, 09 Nov 2012 09:04:00 GMT
-recorded_with: VCR 2.2.5
+  recorded_at: Thu, 07 Mar 2013 22:05:35 GMT
+recorded_with: VCR 2.4.0
